# zestimate-agent

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEMO_SCRIPT.md  Dockerfile  README.md  SPEC.md  eval_cases.example.yaml  fly.toml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
src/zestimate_agent/: __init__.py  agent.py  cache.py  cli.py  config.py  crosscheck.py  errors.py  logging.py  models.py  normalize.py  parse.py  prewarm.py  resolve.py  tracing.py  validate.py
src/zestimate_agent/api/: __init__.py  app.py  deps.py  landing.py  metrics.py  routes.py  schemas.py  signed_url.py  technical.py
src/zestimate_agent/eval/: __init__.py  dataset.py  report.py  runner.py  yaml_loader.py
src/zestimate_agent/fetch/: __init__.py  base.py  chain.py  circuit_breaker.py  playwright.py  unblocker.py
tests/fixtures/: zillow_82362438.html  zillow_82362438_nextdata.json
tests/fixtures/cassettes/: fetch_sfh_portland.json  resolve_ambiguous_main_st.json  resolve_empire_state.json  resolve_not_found.json  resolve_seattle_condo.json
tests/integration/: test_resolver_live.py
tests/unit/: test_agent_cache.py  test_api.py  test_cache.py  test_cache_redis.py  test_circuit_breaker.py  test_crosscheck.py  test_eval.py  test_eval_yaml.py  test_fetch_cassettes.py  test_fetch_chain.py  test_fetch_playwright.py  test_fetch_unblocker.py  test_never_raises.py  test_normalize.py  test_parse.py  test_prewarm.py  test_resolve.py  test_resolve_cassettes.py  test_scaffold.py  test_signed_url.py  test_tracing.py  test_validate.py
