[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zestimate-agent"
version = "0.1.0"
description = "Production-grade Python agent that fetches the current Zillow Zestimate for a US property address."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Prasanna" }]
keywords = ["zillow", "zestimate", "real-estate", "agent", "scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "structlog>=24.1",
    "typer>=0.12",
    "rich>=13.7",
    "usaddress>=0.5.10",
    "selectolax>=0.3.21",
    "python-dotenv>=1.0",
    "diskcache>=5.6",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.42",
    "playwright-stealth>=1.0.6",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "prometheus-client>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-requests",
    "respx>=0.21",
]
all = [
    "zestimate-agent[playwright,api,dev]",
]

[project.scripts]
zestimate = "zestimate_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zestimate_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: tests that hit the real Zillow.com (require RUN_LIVE_TESTS=1)",
    "slow: slow tests",
]
addopts = "-ra --strict-markers"
